--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <title>Let's get to work!</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+        <body>
+
+        </body>
+</html>
